# MSM-minecraft-server-manager-win-linux-mac

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  architecture.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cli/: main.py
examples/: launchd.plist  nssm_install.bat  systemd.service
msm_core/: __init__.py  api.py  background.py  backups.py  config.py  config_editor.py  console.py  db.py  exceptions.py  installers.py  java_manager.py  lifecycle.py  monitor.py  platform.py  plugins.py  scheduler.py  schemas.py  services.py  utils.py
platform_adapters/: __init__.py  base.py  linux_adapter.py  macos_adapter.py  windows_adapter.py
tests/integration/: test_api_integration.py  test_cli_integration.py
tests/unit/: test_backups.py  test_config.py  test_plugins.py  test_scheduler.py  test_security.py
web/backend/: app.py  auth.py  ws_console.py
web/frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/frontend/src/: App.tsx  index.css
web/frontend/src/components/: ConsoleView.tsx  CreateServerModal.tsx  ServerCard.tsx  Sidebar.tsx  StatsBar.tsx  index.ts
web/frontend/src/hooks/: index.ts
web/frontend/src/pages/: BackupsPage.tsx  ConsolePage.tsx  Dashboard.tsx  JavaPage.tsx  PluginsPage.tsx  SchedulesPage.tsx  SettingsPage.tsx  index.ts
web/frontend/src/types/: index.ts
