[tool.poetry]
name = "msm-minecraft-server-manager"
version = "0.1.0"
description = "Cross-platform local Minecraft server host manager"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "msm_core"}, {include = "platform_adapters"}, {include = "cli"}, {include = "web"}]

[tool.poetry.scripts]
msh = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
typer = "^0.20.0"
rich = "^13.7.0"
sqlalchemy = "^2.0.25"
psutil = "^5.9.8"
requests = "^2.31.0"
aiofiles = "^23.2.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
websockets = "^12.0"
croniter = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
httpx = "^0.26.0"
black = "^24.1.1"
ruff = "^0.2.1"
isort = "^5.13.2"
mypy = "^1.8.0"
types-psutil = "^5.9.5.20240205"
types-requests = "^2.31.0.20240125"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
